1999-05-28  James Gallagher  <jimg@dcz.dods.org>

	* Merge with alpha-3-0-0

1999-05-25  James Gallagher  <jimg@dcz.dods.org>

	* Added security fixes for the nph-mat.in script.

1999-05-05  James Gallagher  <jimg@dcz.dods.org>

	* Added test-coverage target to Makefile.in

1999-03-29  James Gallagher  <jimg@dcz.dods.org>

	* Added stubs for the new type classes.

1999-01-21  James Gallagher  <jimg@dcz.cvo.oneworld.com>

	* The server now registers the file name properly. This ensures
	that the new projection functions can call the read() member
	function and not fail.

Tue Dec 30 15:59:46 1997  James Gallagher  <jimg@localhost>

	* Changed the filter programs so that they use the new DODSFilter
	class. This corrects problems with those program and the
	DODS_Dispatch perl class.

$Id: ChangeLog,v 1.6 1999/05/28 17:06:47 jimg Exp $
