@@ -2,16 +2,12 @@
 dnl -*- m4 -*-
 dnl Process this file with autoconf to produce a configure script.
 
-AC_REVISION($Id: configure.in,v 1.11 1999/08/09 18:31:00 jimg Exp $)
+AC_REVISION($Id: configure.in,v 1.12 1999/11/05 05:50:21 jimg Exp $)
 AC_INIT(MATArray.cc)
 AC_CONFIG_HEADER(config_mat.h)
 AC_CONFIG_AUX_DIR(../../etc)
 
 dnl the variable `dir' is used as a basename for the directory tar file
-
-fulldir=`pwd`
-dir=`basename ${fulldir}`
-AC_SUBST(dir)
 
 DODS_GET_DODS_ROOT
 DODS_DIRECTORY_VERSION
@@ -27,9 +23,9 @@ dnl to default values otherwise.
 
 AC_CANONICAL_HOST
 
-CFLAGS="-g -O2 $CFLAGS"
-CXXFLAGS="-g -O2 $CXXFLAGS"
-LDFLAGS="-g $LDFLAGS"
+CFLAGS="-gstabs -O2 $CFLAGS"
+CXXFLAGS="-gstabs -O2 $CXXFLAGS"
+dnl LDFLAGS="-gstabs $LDFLAGS"
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -40,16 +36,12 @@ AC_PROG_MAKE_SET
 AC_PROG_INSTALL
 
 DODS_PROG_LEX
+DODS_PROG_GTAR
+DODS_PROG_PERL
 DODS_PROG_BISON
 DODS_GCC
 
 DODS_CHECK_GCC_DEBUG
-
-if echo $INSTALL | egrep 'install-sh'
-then
-	INSTALL="$(DODS_ROOT)/etc/install-sh -c"
-	AC_SUBST(INSTALL)
-fi
 
 dnl You should have g++, but you can override that with an environment
 dnl variable. 
@@ -57,11 +49,6 @@ dnl variable.
 CXX=${CXX-g++}
 AC_MSG_RESULT(Setting CXX to $CXX)
 AC_SUBST(CXX)
-
-dnl Find where perl lives on the user's system
-
-PERL=`which perl`
-AC_SUBST(PERL)
 
 dnl Checks for header files.
 AC_HEADER_STDC
@@ -86,8 +73,8 @@ AC_DEFINE(V4_COMPAT)
 DODS_COMPRESSION_LIB
 DODS_RX_LIB
 DODS_WWW_LIB
-DODS_TCL_LIB
-DODS_TK_LIB
+dnl DODS_TCL_LIB
+dnl DODS_TK_LIB
 
 DODS_EFENCE
 
