@@ -1,3 +1,12 @@
+1999-11-04  James Gallagher  <jimg@dcz.dods.org>
+
+	* Merged: cvs update -j release-3-1-0 -j release-3-1, the next
+	merge should use -j release-3-1-1 -j release-3-1.
+
+	* Changes for the new Makefile/configure scheme.
+
+	* Fixed a string class bug: data() --> c_str() (Ethan).
+
 1999-05-28  James Gallagher  <jimg@dcz.dods.org>
 
 	* Merge with alpha-3-0-0
@@ -26,5 +35,5 @@ Tue Dec 30 15:59:46 1997  James Gallagher  <jimg@localhost>
 	class. This corrects problems with those program and the
 	DODS_Dispatch perl class.
 
-$Id: ChangeLog,v 1.6 1999/05/28 17:06:47 jimg Exp $
+$Id: ChangeLog,v 1.7 1999/11/05 05:50:20 jimg Exp $
 
